--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.4",
     "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
