--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.15",
     "@tailwindcss/vite": "^4.1.15",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
     "postcss": "^8.5.6",
     "react": "^18.2.0",
